--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <canvas id="cv1" width="360" height="240" hidden></canvas>
 
+  <a href="http://gyojir.com">gyojirのページに戻る</a>
   <header class="title">
     <h1>4コマジェネレーター</h1>
     <p>4コマ漫画の枠線画像を作れるよ</p>
